--- a/styles.css
+++ b/styles.css
@@ -124,12 +124,75 @@ nav.active {
 /* header */
 
 header {
-  background-color: var(--orange);
+  background-color: whitesmoke;
   width: 84vw;
   position: fixed;
   right: 0;
   top: 0;
   border-bottom: var(--blue) 5px solid;
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+}
+
+/* header buttons */
+
+.myButton {
+  background-color: var(--green);
+  border-radius: 15px;
+  font-weight: bold;
+  border: 1px solid #18ab29;
+  display: inline-block;
+  cursor: pointer;
+  color: white;
+  font-size: 1rem;
+  padding: 10px 20px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #2f6627;
+}
+.myButton:hover {
+  background-color: var(--blue);
+}
+.myButton:active {
+  position: relative;
+  top: 1px;
+}
+
+/* header grid */
+
+.div2h iconify-icon:hover {
+  background-color: var(--green);
+  border-radius: 20px;
+  cursor: pointer;
+}
+
+.div2h iconify-icon:active {
+  background-color: var(--blue);
+}
+
+.div3h {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.div5h {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-evenly;
+}
+
+.div5h iconify-icon:hover {
+  background-color: var(--green);
+  cursor: pointer;
+}
+
+.div5h iconify-icon:active {
+  background-color: var(--blue);
 }
 
 @media (max-width: 1075px) {
@@ -152,5 +215,48 @@ header {
 
   nav ul li a.toggle {
     display: none;
+  }
+}
+
+@media (max-width: 430px) {
+  .parent-header {
+    width: calc(100vw - 55px);
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    grid-column-gap: 5px;
+    grid-row-gap: 5px;
+    padding: 5px;
+  }
+
+  .myButton {
+    padding: 5px 20px;
+  }
+
+  .div1h {
+    grid-area: 1 / 1 / 2 / 2;
+  }
+  .div2h {
+    grid-area: 1 / 2 / 2 / 3;
+    display: flex;
+    justify-content: flex-end;
+  }
+  .div3h {
+    grid-area: 1 / 3 / 2 / 4;
+  }
+  .div4h {
+    grid-area: 2 / 1 / 3 / 4;
+  }
+  .div5h {
+    grid-area: 3 / 1 / 4 / 4;
+  }
+  .div6h {
+    grid-area: 4 / 1 / 5 / 2;
+  }
+  .div7h {
+    grid-area: 4 / 2 / 5 / 3;
+  }
+  .div8h {
+    grid-area: 4 / 3 / 5 / 4;
   }
 }
