--- a/styles.css
+++ b/styles.css
@@ -124,6 +124,7 @@ nav.active {
 /* header */
 
 header {
+  padding-top: 5px;
   background-color: whitesmoke;
   width: 84vw;
   position: fixed;
@@ -178,6 +179,16 @@ header {
   align-items: center;
   font-weight: bold;
   cursor: pointer;
+}
+
+.greeting {
+  font-size: small;
+  font-weight: bold;
+}
+.user-name {
+  font-size: larger;
+  font-weight: bold;
+  font-style: italic;
 }
 
 .div5h {
