--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
 
 * {
   box-sizing: border-box;
-  /* border: 1px solid red; */
+  border: 1px solid red;
   font-family: "Roboto", sans-serif;
 }
 
@@ -20,6 +20,14 @@ body {
 }
 
 /* side nav bar */
+
+.scroll {
+  overflow-y: auto;
+  height: auto;
+  /* max-height:200px; */
+  border: 1px solid black;
+  /* width:300px; */
+}
 
 nav {
   width: 16vw;
@@ -163,6 +171,51 @@ header {
 
 /* header grid */
 
+.parent-header {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 5px;
+  grid-row-gap: 5px;
+  padding: 5px;
+}
+
+.div1h {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  grid-area: 1 / 1 / 2 / 4;
+}
+
+.div1h img {
+  object-fit: contain;
+  width: 35px;
+  padding: 0%;
+  margin: 0;
+  margin-left: 5px;
+}
+.div2h {
+  grid-area: 1 / 4 / 2 / 5;
+}
+.div3h {
+  grid-area: 1 / 5 / 2 / 6;
+}
+.div4h {
+  grid-area: 1 / 6 / 2 / 7;
+}
+.div5h {
+  grid-area: 2 / 1 / 3 / 4;
+}
+.div6h {
+  grid-area: 2 / 4 / 3 / 5;
+}
+.div7h {
+  grid-area: 2 / 5 / 3 / 6;
+}
+.div8h {
+  grid-area: 2 / 6 / 3 / 7;
+}
+
 .div2h iconify-icon:hover {
   background-color: var(--green);
   border-radius: 20px;
@@ -188,13 +241,19 @@ header {
 .user-name {
   font-size: larger;
   font-weight: bold;
-  font-style: italic;
+  margin-left: 25px;
+}
+
+.div4h {
+  display: flex;
+  flex-direction: column;
 }
 
 .div5h {
   display: flex;
   flex-direction: row-reverse;
-  justify-content: space-evenly;
+  justify-content: center;
+  align-items: center;
 }
 
 .div5h iconify-icon:hover {
@@ -204,6 +263,62 @@ header {
 
 .div5h iconify-icon:active {
   background-color: var(--blue);
+}
+
+.div5h input[type="text"] {
+  font-size: 1rem;
+  height: fit-content;
+}
+
+/* projects grid */
+
+h3 {
+  margin-bottom: 5px;
+  text-align: center;
+}
+
+.parent-projects {
+  display: grid;
+  margin: 0%;
+  padding: 0;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  grid-column-gap: 5px;
+  grid-row-gap: 5px;
+  text-align: center;
+}
+
+.parent-projects p {
+  font-size: smaller;
+  margin: 0;
+}
+
+.parent-projects img {
+  width: 100%;
+  border-radius: 5px;
+  border: 1px var(--blue) solid;
+}
+
+.div1p {
+  display: flex;
+  flex-direction: column;
+  grid-area: 1 / 1 / 2 / 2;
+}
+
+.div2p {
+  grid-area: 1 / 2 / 2 / 3;
+}
+.div3p {
+  grid-area: 2 / 1 / 3 / 2;
+}
+.div4p {
+  grid-area: 2 / 2 / 3 / 3;
+}
+.div5p {
+  grid-area: 3 / 1 / 4 / 2;
+}
+.div6p {
+  grid-area: 3 / 2 / 4 / 3;
 }
 
 @media (max-width: 1075px) {
@@ -235,18 +350,33 @@ header {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(4, 1fr);
-    grid-column-gap: 5px;
-    grid-row-gap: 5px;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
     padding: 5px;
   }
 
+  main {
+    width: calc(100vw - 55px);
+    padding-top: 150px;
+    position: fixed;
+    right: 0;
+    padding-left: 5px;
+  }
+
   .myButton {
-    padding: 5px 20px;
+    padding: 5px 15px;
+    text-align: center;
+    justify-content: center;
   }
 
   .div1h {
     grid-area: 1 / 1 / 2 / 2;
   }
+
+  .div1h img {
+    margin-left: 10px;
+  }
+
   .div2h {
     grid-area: 1 / 2 / 2 / 3;
     display: flex;
@@ -257,7 +387,20 @@ header {
   }
   .div4h {
     grid-area: 2 / 1 / 3 / 4;
+    font-size: smaller;
+    margin-left: 5px;
+    align-items: center;
   }
+
+  .greeting {
+    font-size: smaller;
+    text-align: start;
+  }
+
+  .user-name {
+    margin-left: 0;
+  }
+
   .div5h {
     grid-area: 3 / 1 / 4 / 4;
   }
