--- a/styles.css
+++ b/styles.css
@@ -127,10 +127,11 @@ header {
   padding-top: 5px;
   background-color: white;
   width: 84vw;
-  position: fixed;
+  /* position: fixed; */
+  padding-left: 55px;
   right: 0;
   top: 0;
-  border-bottom: var(--blue) 5px solid;
+  /* border-bottom: var(--blue) 5px solid; */
 }
 
 .center {
@@ -172,6 +173,7 @@ header {
   grid-column-gap: 5px;
   grid-row-gap: 5px;
   padding: 5px;
+  border-bottom: var(--blue) 5px solid;
 }
 
 .div1h {
@@ -272,6 +274,11 @@ main {
   max-height: 700px;
 }
 
+main p {
+  color: var(--dark-blue);
+  text-align: center;
+}
+
 h3 {
   margin-bottom: 5px;
   text-align: center;
@@ -340,6 +347,32 @@ h3 {
   grid-area: 3 / 2 / 4 / 3;
 }
 
+/* links grid */
+
+.div2l {
+  display: inline-block;
+  flex-direction: column;
+  align-items: center;
+  margin: 5px auto;
+}
+
+.div2l iconify-icon {
+  vertical-align: middle;
+}
+
+.div2l p {
+  margin-top: 5px;
+  color: black;
+  margin-bottom: 5px;
+}
+
+.div2l div a {
+  display: inline-flex;
+  color: #073b4c;
+  text-decoration: none;
+  font-weight: bold;
+}
+
 @media (max-width: 1075px) {
   nav {
     /* left: -60px; */
@@ -363,12 +396,24 @@ h3 {
   }
 }
 
+.italic {
+  font-style: italic;
+}
+
+.text-left {
+  text-align: left;
+}
+
 @media (max-width: 430px) {
+  header {
+    padding-left: 55px;
+  }
+
   .parent-header {
     width: calc(100vw - 55px);
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 1fr);
     grid-column-gap: 0px;
     grid-row-gap: 0px;
     padding: 5px;
@@ -377,8 +422,8 @@ h3 {
   main {
     background-color: whitesmoke;
     width: calc(100vw - 55px);
-    max-height: 750px;
-    padding-top: 150px;
+    max-height: 100%;
+    /* padding-top: 120px; */
     right: 0;
     padding-left: 5px;
     overflow-y: auto;
@@ -415,10 +460,11 @@ h3 {
     grid-area: 1 / 3 / 2 / 4;
   }
   .div4h {
-    grid-area: 2 / 1 / 3 / 4;
+    /* grid-area: 2 / 1 / 3 / 4;
     font-size: smaller;
     margin-left: 5px;
-    align-items: center;
+    align-items: center; */
+    display: none;
   }
 
   .greeting {
@@ -431,15 +477,30 @@ h3 {
   }
 
   .div5h {
-    grid-area: 3 / 1 / 4 / 4;
+    grid-area: 3 / 1 / 2 / 4;
   }
   .div6h {
-    grid-area: 4 / 1 / 5 / 2;
+    grid-area: 3 / 1 / 4 / 2;
   }
   .div7h {
-    grid-area: 4 / 2 / 5 / 3;
+    grid-area: 3 / 2 / 4 / 3;
   }
   .div8h {
-    grid-area: 4 / 3 / 5 / 4;
+    grid-area: 3 / 3 / 4 / 4;
+  }
+
+  .parent-links {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 5px;
+    grid-row-gap: 5px;
+  }
+
+  .div1l {
+    grid-area: 1 / 1 / 3 / 2;
+  }
+  .div2l {
+    grid-area: 1 / 2 / 3 / 3;
   }
 }
