--- a/styles.css
+++ b/styles.css
@@ -296,15 +296,7 @@ h3 {
   grid-column-gap: 5px;
   grid-row-gap: 5px;
   text-align: center;
-}
-
-.parent-projects div {
-  border: var(--orange) 3px solid;
-}
-
-.parent-projects p {
-  font-size: smaller;
-  margin: 0;
+  font-size: larger;
 }
 
 .parent-projects a {
@@ -322,32 +314,38 @@ h3 {
   display: flex;
   flex-direction: column;
   grid-area: 1 / 1 / 2 / 2;
+  border: var(--orange) 3px solid;
 }
 
 .div2p {
   display: flex;
   flex-direction: column;
   grid-area: 1 / 2 / 2 / 3;
+  border: var(--orange) 3px solid;
 }
 .div3p {
   display: flex;
   flex-direction: column;
   grid-area: 2 / 1 / 3 / 2;
+  border: var(--orange) 3px solid;
 }
 .div4p {
   display: flex;
   flex-direction: column;
   grid-area: 2 / 2 / 3 / 3;
+  border: var(--orange) 3px solid;
 }
 .div5p {
   display: flex;
   flex-direction: column;
   grid-area: 3 / 1 / 4 / 2;
+  border: var(--orange) 3px solid;
 }
 .div6p {
   display: flex;
   flex-direction: column;
   grid-area: 3 / 2 / 4 / 3;
+  border: var(--orange) 3px solid;
 }
 
 /* links grid */
@@ -414,15 +412,36 @@ h3 {
   color: white;
 }
 
+.projects-title {
+  margin-top: 5px;
+  margin-bottom: 0px;
+}
+
 @media (max-width: 1075px) {
   nav {
     /* left: -60px; */
     width: 55px;
   }
+  .parent-projects img {
+    width: 20vw;
+    margin: 10px;
+  }
+
+  .intro {
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+
+  .flex-side {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
   header {
-    width: calc(100vw - 55px);
+    width: 100vw;
     padding-left: 55px;
+    border-width: 100vw;
   }
 
   main {
@@ -451,6 +470,13 @@ h3 {
   text-align: left;
 }
 
+@media (max-width: 800px) {
+  .parent-projects div {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
 @media (max-width: 430px) {
   header {
     padding-left: 55px;
@@ -477,8 +503,17 @@ h3 {
     overflow-y: auto;
   }
 
+  .parent-projects div {
+    display: flex;
+    flex-direction: column;
+  }
+
   .parent-projects img {
     width: 30vw;
+  }
+
+  .parent-projects p {
+    font-size: smaller;
   }
 
   body {
