--- a/styles.css
+++ b/styles.css
@@ -151,7 +151,7 @@ header {
   cursor: pointer;
   color: white;
   font-size: 1rem;
-  padding: 10px 20px;
+  padding: 5px 15px;
   text-decoration: none;
   text-shadow: 0px 1px 0px #2f6627;
 }
@@ -164,6 +164,10 @@ header {
 }
 
 /* header grid */
+
+/* header * {
+  border: 1px solid red;
+} */
 
 .parent-header {
   display: grid;
@@ -206,13 +210,22 @@ header {
   grid-area: 1 / 1 / 2 / 4;
 }
 .div6h {
+  display: flex;
   grid-area: 2 / 4 / 3 / 5;
+  justify-content: flex-end;
+  align-items: center;
 }
 .div7h {
+  display: flex;
   grid-area: 2 / 5 / 3 / 6;
+  justify-content: center;
+  align-items: center;
 }
 .div8h {
   grid-area: 2 / 6 / 3 / 7;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .div2h iconify-icon:hover {
@@ -246,12 +259,13 @@ header {
 .div4h {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .div5h {
   display: flex;
   flex-direction: row-reverse;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
 
@@ -267,6 +281,8 @@ header {
 .div5h input[type="text"] {
   font-size: 1rem;
   height: fit-content;
+  width: 80%;
+  max-width: 550px;
 }
 
 /* projects grid */
@@ -287,9 +303,21 @@ h3 {
   text-align: center;
 }
 
+.intro {
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+.flex-side {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .parent-projects {
   display: grid;
   margin: 0 auto;
+  max-width: 1000px;
   padding: 0;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(3, 1fr);
@@ -305,9 +333,11 @@ h3 {
 }
 
 .parent-projects img {
-  width: 100%;
+  width: 30vw;
   border-radius: 5px;
   border: 1px var(--blue) solid;
+  margin: 10px;
+  max-width: 250px;
 }
 
 .div1p {
@@ -423,19 +453,13 @@ h3 {
     width: 55px;
   }
   .parent-projects img {
-    width: 20vw;
+    width: 30vw;
     margin: 10px;
   }
 
-  .intro {
-    margin-left: 5%;
-    margin-right: 5%;
-  }
-
-  .flex-side {
+  .parent-projects div {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
   }
 
   header {
@@ -474,6 +498,60 @@ h3 {
   .parent-projects div {
     display: flex;
     flex-direction: column;
+  }
+
+  .parent-header {
+    width: calc(100vw - 55px);
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    padding: 5px;
+  }
+
+  .div1h {
+    grid-area: 1 / 1 / 2 / 2;
+    justify-content: center;
+  }
+
+  .div1h img {
+    margin-left: 10px;
+  }
+
+  .div2h {
+    grid-area: 1 / 2 / 2 / 3;
+    display: flex;
+    justify-content: flex-end;
+  }
+  .div3h {
+    grid-area: 1 / 3 / 2 / 4;
+  }
+  .div4h {
+    display: none;
+  }
+
+  .greeting {
+    font-size: smaller;
+    text-align: start;
+  }
+
+  .user-name {
+    margin-left: 0;
+  }
+
+  .div5h {
+    grid-area: 3 / 1 / 2 / 4;
+    justify-content: center;
+  }
+  .div6h {
+    grid-area: 3 / 1 / 4 / 2;
+  }
+  .div7h {
+    grid-area: 3 / 2 / 4 / 3;
+  }
+  .div8h {
+    grid-area: 3 / 3 / 4 / 4;
   }
 }
 
