--- a/styles.css
+++ b/styles.css
@@ -308,8 +308,11 @@ h3 {
 }
 
 .intro {
+  text-align: center;
+  /* margin: 0 auto; */
   margin-left: 5%;
   margin-right: 5%;
+  /* max-width: 1000px; */
 }
 
 .flex-side {
@@ -384,10 +387,6 @@ h3 {
 
 /* links grid */
 
-.parent-links * {
-  border: red 2px solid;
-}
-
 .parent-links {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -395,6 +394,16 @@ h3 {
   grid-column-gap: 5px;
   grid-row-gap: 5px;
   background-color: white;
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
+.section-footer {
+  display: flex;
+  flex-direction: column;
+  width: 33%;
+  justify-content: flex-end;
+  border: #ef476f 1px solid;
 }
 
 .section-footer p {
@@ -406,7 +415,12 @@ h3 {
 .div1l {
   border: var(--pink) 3px solid;
   font-size: small;
-  /* display: flex; */
+}
+
+.div1l div {
+  display: flex;
+  justify-content: space-evenly;
+  width: 1fr;
 }
 
 .div2l {
@@ -419,7 +433,7 @@ h3 {
 }
 
 .div2l div div {
-  border-bottom: #118ab2 solid 3px;
+  border-bottom: #118ab2 3px;
 }
 
 .contact-me {
@@ -689,7 +703,13 @@ h3 {
   }
 
   .div1l {
+    flex-direction: column;
     grid-area: 1 / 1 / 3 / 2;
+  }
+
+  .div1l div {
+    flex-direction: column;
+    width: 100%;
   }
   .div2l {
     grid-area: 1 / 2 / 3 / 3;
